manifests/network-multitool.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: k8s-test
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: network-multitool-deployment
  namespace: k8s-test
  labels:
    app: network-multitool
spec:
  replicas: 1
  selector:
    matchLabels:
      app: network-multitool
  template:
    metadata:
      labels:
        app: network-multitool
    spec:
      containers:
        - name: network-multitool
          image: wbitt/network-multitool:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: local-storage
              mountPath: /usr/share/nginx/html
      volumes:
        - name: local-storage
          persistentVolumeClaim:
            claimName: network-multitool-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: network-multitool-service
  namespace: k8s-test
  labels:
    app: network-multitool
spec:
  selector:
    app: network-multitool
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: k8s-test
  name: network-multitool-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: k8s-playground.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: network-multitool-service
                port:
                  number: 80
